(node/comcam-daq-mgt.cp) add network configuration to support EL8

--- a/hieradata/node/comcam-daq-mgt.cp.lsst.org.yaml
+++ b/hieradata/node/comcam-daq-mgt.cp.lsst.org.yaml
@@ -1,30 +1,74 @@
 ---
-profile::daq::daq_interface::hwaddr: "f8:f2:1e:82:a9:b0"
-profile::daq::daq_interface::uuid: "757b897b-0721-44b6-86fc-be1d86d144cd"
-profile::daq::daq_interface::was: "p2p1"
-profile::daq::daq_interface::mode: "dhcp-server"
-
-#daq::daqsdk::version: "R5-V6.7"
-
-network::interfaces_hash:
-  em1:  # fqdn
-    bootproto: "dhcp"
-    defroute: "yes"
-    onboot: "yes"
-    type: "Ethernet"
-  em2:  # comcam-sm
-    bootproto: "none"
-    defroute: "no"
-    ipaddress: "10.0.0.1"
-    ipv6init: "no"
-    netmask: "255.255.255.0"
-    onboot: "yes"
-    type: "Ethernet"
-  # p2p1 -> lsst-daq -- 192.168.100.0/24
-  p2p2:  # not connected
-    bootproto: "none"
-    onboot: "no"
-    type: "Ethernet"
+nm::connections:
+  eno1:  #fqdn
+    content:
+      connection:
+        id: "eno1"
+        uuid: "03da7500-2101-c722-2438-d0d006c28c73"
+        type: "ethernet"
+        interface-name: "eno1"
+      ethernet: {}
+      ipv4:
+        method: "auto"
+      ipv6:
+        method: "disabled"
+      proxy: {}
+  eno2:  # comcam-sm
+    content:
+      connection:
+        id: "eno2"
+        uuid: "46d19ce1-bcab-7e77-6fc7-b730b26c54b1"
+        type: "ethernet"
+        interface-name: "eno2"
+      ethernet: {}
+      ipv4:
+        address1: "10.0.0.1/24"
+        method: "manual"
+      ipv6:
+        method: "disabled"
+  enp1s0f0:  # lsst-daq interface
+    content:
+      connection:
+        id: "enp1s0f0"
+        uuid: "d5642f16-53c6-6053-7d4d-8c6ef5ae8a38"
+        type: "ethernet"
+        interface-name: "enp1s0f0"
+        master: "lsst-daq"
+        slave-type: "bridge"
+      ethernet: {}
+      ethtool:
+        ring-rx: "4096"
+        ring-tx: "4096"
+      bridge-port: {}
+  lsst-daq:
+    content:
+      connection:
+        id: "lsst-daq"
+        uuid: "d5642f16-7bf7-7d4d-de5a-25e7d7c355a4"
+        type: "bridge"
+        interface-name: "lsst-daq"
+      ethernet: {}
+      bridge:
+        stp: "false"
+      ipv4:
+        address1: "192.168.100.1/24"
+        method: "manual"
+      ipv6:
+        method: "disabled"
+      proxy: {}
+  enp1s0f1:
+    content:
+      connection:
+        id: "enp1s0f1"
+        uuid: "de9904c8-9577-1a17-36b1-34b94132f06a"
+        type: "ethernet"
+        autoconnect: "false"
+        interface-name: "enp1s0f1"
+      ethernet: {}
+      ipv4:
+        method: "disabled"
+      ipv6:
+        method: "disabled"
 
 hosts::entries:
   comcam-sm:
