(role/ccs-hcu) add some libusb packages

--- a/hieradata/role/ccs-hcu.yaml
+++ b/hieradata/role/ccs-hcu.yaml
@@ -6,6 +6,9 @@ classes:
   - "profile::core::common"
 
 packages:
+  - "libusb"
+  - "libusb-devel"
+  - "libusbx-devel"
   - "telnet"
   - "usbutils"
 
