(node/lsstcam-shutter[01,02].cp) install ccs_hcu pth450 support

--- a/hieradata/node/lsstcam-shutter01.cp.lsst.org.yaml
+++ b/hieradata/node/lsstcam-shutter01.cp.lsst.org.yaml
@@ -31,6 +31,7 @@ nm::connections:
         method: "disabled"
       proxy: {}
 
+ccs_hcu::pth450: true
 ccs_hcu::shutter: true
 
 ccs_software::services:
