(cluster/{auxtel,comcam,lsstcam}-ccs) add cycle 37 ccs releases

--- a/hieradata/cluster/auxtel-ccs.yaml
+++ b/hieradata/cluster/auxtel-ccs.yaml
@@ -86,6 +86,10 @@ ccs_software::installations:
     aliases:
       - "puppet-2.3.9"
 
+  ats-software-2.3.10:
+    aliases:
+      - "puppet-2.3.10"
+
 ## Used in lookups:
 ccs_site: "summit"
 ccs_instrument: "ats"
