--- a/hieradata/cluster/comcam-ccs.yaml
+++ b/hieradata/cluster/comcam-ccs.yaml
@@ -96,6 +96,9 @@ ccs_software::installations:
   comcam-software-2.4.7:
     aliases:
       - "puppet-2.4.7"
+  comcam-software-2.4.8:
+    aliases:
+      - "puppet-2.4.8"
 
 daq::daqsdk::purge: false
 
