(node/comcam-mcm.cp) add routes to node

--- a/hieradata/node/comcam-mcm.cp.lsst.org.yaml
+++ b/hieradata/node/comcam-mcm.cp.lsst.org.yaml
@@ -26,6 +26,11 @@ nm::connections:
         dns: "139.229.160.53;139.229.160.54;139.229.160.55;"
         dns-search: "cp.lsst.org;"
         method: "manual"
+        never-default: "true"
+        route1: "139.229.147.0/24,139.229.170.254"
+        route2: "139.229.166.0/24,139.229.170.254"
+        route3: "139.229.167.0/24,139.229.170.254"
+        route4: "139.229.178.0/24,139.229.170.254"
       ipv6:
         method: "disabled"
       proxy: {}
@@ -81,12 +86,3 @@ nm::connections:
         method: "disabled"
       ipv6:
         method: "disabled"
-
-network::mroutes_hash:
-  eno2:
-    routes:
-      "139.229.147.0/24": "139.229.170.254"
-      "139.229.166.0/24": "139.229.170.254"
-      "139.229.167.0/24": "139.229.170.254"
-      #"139.229.170.0/24": "139.229.170.254"
-      "139.229.178.0/24": "139.229.170.254"
