(role/ccs-dc) add profile::core::sysctl::lhn

--- a/hieradata/role/ccs-dc.yaml
+++ b/hieradata/role/ccs-dc.yaml
@@ -7,3 +7,6 @@ classes:
   - "profile::core::common"
   - "profile::core::debugutils"
   - "profile::core::nfsclient"
+  - "profile::core::sysctl::lhn"
+
+profile::ccs::common::sysctls: false
