(role/atsccs) add profile::core::sysctl::lhn

--- a/hieradata/role/atsccs.yaml
+++ b/hieradata/role/atsccs.yaml
@@ -8,6 +8,9 @@ classes:
   - "profile::core::debugutils"
   - "profile::core::nfsclient"
   - "profile::core::nfsserver"
+  - "profile::core::sysctl::lhn"
+
+profile::ccs::common::sysctls: false
 
 profile::core::systemd::tmpfile:
   docker_tmp.conf:  # XXX short term kludge
