--- a/hieradata/role/ccs-mcm.yaml
+++ b/hieradata/role/ccs-mcm.yaml
@@ -22,6 +22,8 @@ profile::ccs::tomcat::wars:
     war_source: "https://repo-nexus.lsst.org/nexus/repository/ccs-maven2-public/org/lsst/CCSWebTrending/2.3/CCSWebTrending-2.3.war"
   CCSImageUtilities.war:
     war_source: "https://repo-nexus.lsst.org/nexus/repository/ccs-maven2-public/org/lsst/org-lsst-ccs-image-utilities-war/3.1.18/org-lsst-ccs-image-utilities-war-3.1.18.war"
+  FITSInfo.war:
+    war_source: "https://repo-nexus.lsst.org/nexus/repository/ccs-maven2/org/lsst/fits/FITSInfo/1.0.0/FITSInfo-1.0.0.war"
   rest.war:
     war_source: "https://repo-nexus.lsst.org/nexus/repository/ccs-maven2-public/org/lsst/org-lsst-ccs-localdb-war/4.1.39/org-lsst-ccs-localdb-war-4.1.39.war"
 
