--- a/hieradata/node/comcam-fp01.tu.lsst.org.yaml
+++ b/hieradata/node/comcam-fp01.tu.lsst.org.yaml
@@ -61,6 +61,8 @@ nfs::client_mounts:
     server: "%{facts.fqdn}"
     atboot: true
 
+profile::ccs::file_transfer::s3daemon: true
+
 ccs_software::services:
   prod:
     - "h2db"
