(node/comcam-fp01.cp) add hosts entry for SLAC s3

--- a/hieradata/node/comcam-fp01.cp.lsst.org.yaml
+++ b/hieradata/node/comcam-fp01.cp.lsst.org.yaml
@@ -118,6 +118,10 @@ nfs::client_mounts:
     server: "%{facts.fqdn}"
     atboot: true
 
+hosts::entries:
+  sdfembs3.sdf.slac.stanford.edu:
+    ip: "172.24.7.249"
+
 ccs_monit::ping_hosts:
   - "comcam-db01"
   - "comcam-dc01"
