--- a/hieradata/cluster/ruka.yaml
+++ b/hieradata/cluster/ruka.yaml
@@ -31,12 +31,7 @@ nm::connections:
       bridge:
         stp: "false"
       ipv4:
-        method: "auto"
-        route1: "139.229.153.0/24"
-        route1_options: "table=2505"
-        route2: "0.0.0.0/0,139.229.153.254"
-        route2_options: "table=2505"
-        routing-rule1: "priority 100 from 139.229.153.64/26 table 2505"
+        method: "disabled"
       ipv6:
         method: "disabled"
       proxy: {}
