--- a/hieradata/cluster/ruka/variant/r440.yaml
+++ b/hieradata/cluster/ruka/variant/r440.yaml
@@ -49,12 +49,12 @@ nm::connections:
         uuid: "d5642f16-53c6-6053-7d4d-8c6ef5ae8a38"
         type: "vlan"
         interface-name: "ens2f0.2505"
-        master: "br2505"
-        slave-type: "bridge"
+        # master: "br2505"
+        # slave-type: "bridge"
       ethernet:
         cloned-mac-address: "stable"
       vlan:
         flags: "1"
         id: "2505"
         parent: "ens2f0"
-      bridge-port: {}
+      # bridge-port: {}
