--- a/hieradata/cluster/lsstcam-ccs.yaml
+++ b/hieradata/cluster/lsstcam-ccs.yaml
@@ -104,5 +104,7 @@ daq::daqsdk::purge: false
 
 daq::daqsdk::version: "R5-V8.1"
 
+profile::ccs::file_transfer::repo_ref: "IT-5486/s3"
+
 ## Note this is not the same as ccs_instrument.
 profile::ccs::tomcat::trending_site: "maincamera"
