--- a/hieradata/cluster/konkong.yaml
+++ b/hieradata/cluster/konkong.yaml
@@ -2,7 +2,7 @@
 clustershell::groupmembers:
   konkong: {group: "konkong", member: "konkong[01-03]"}
 profile::core::ospl::enable_rundir: true
-profile::core::rke::enable_dhcp: true
+profile::core::k8snode::enable_dhcp: true
 nm::connections:
   eno1np0:
     content: |
