--- a/hieradata/cluster/pillan.yaml
+++ b/hieradata/cluster/pillan.yaml
@@ -2,7 +2,7 @@
 clustershell::groupmembers:
   pillan: {group: "pillan", member: "pillan[01-09]"}
 profile::core::ospl::enable_rundir: true
-profile::core::rke::enable_dhcp: true
+profile::core::k8snode::enable_dhcp: true
 nm::connections:
   enp4s0f3u2u2c2:
     content: |
