--- a/hieradata/cluster/comcam-ccs.yaml
+++ b/hieradata/cluster/comcam-ccs.yaml
@@ -104,4 +104,5 @@ daq::daqsdk::purge: false
 
 daq::daqsdk::version: "R5-V8.1"
 
+profile::ccs::tomcat::rest_url: "comcam-db01:3306/comcamdbprod"
 profile::ccs::tomcat::trending_site: "%{lookup('ccs_instrument')}"
