(role/foreman) add 'rd.neednet=1 ip=dhcp' to kickstart bootloader args
This enables network support in the initrd which is required for clevis
to be able to contact a tang server.

--- a/hieradata/role/foreman.yaml
+++ b/hieradata/role/foreman.yaml
@@ -236,7 +236,7 @@ profile::core::foreman::foreman_config:
 profile::core::foreman::foreman_global_parameter:
   bootloader-append:
     parameter_type: "string"
-    value: "nofb"
+    value: "nofb rd.neednet=1 ip=dhcp"
   disable-firewall:
     parameter_type: "boolean"
     value: true
