--- a/hieradata/node/auxtel-archiver.tu.lsst.org.yaml
+++ b/hieradata/node/auxtel-archiver.tu.lsst.org.yaml
@@ -37,14 +37,12 @@ nm::connections:
       ipv4:
         address1: "140.252.147.133/27"
         method: "manual"
+        never-default: "true"
+        route1: "140.252.147.16/28,140.252.147.129"
+        route2: "140.252.147.48/28,140.252.147.129"
       ipv6:
         method: "disabled"
       proxy: {}
-network::mroutes_hash:
-  dds:
-    routes:
-      "140.252.147.16/28": "140.252.147.129"
-      "140.252.147.48/28": "140.252.147.129"
 
 nfs::server_enabled: false
 nfs::client_enabled: true
