--- a/hieradata/site/tu/cluster/comcam-ccs.yaml
+++ b/hieradata/site/tu/cluster/comcam-ccs.yaml
@@ -1,6 +1,8 @@
 ---
 ccs_site: "tucson"
 ccs_sal::dds_interface: "comcam-mcm-dds.tu.lsst.org"
+## Java 17:
+ccs_sal::dds_extra: "export LD_PRELOAD=${JAVA_HOME}/lib/libjsig.so"
 
 ccs_software::service_email: "tucson-teststand-aler-aaaae4zsdubhmm3n7mowaugr2y@lsstc.slack.com"
 
