--- a/hieradata/cluster/lsstcam-ccs.yaml
+++ b/hieradata/cluster/lsstcam-ccs.yaml
@@ -112,5 +112,6 @@ daq::daqsdk::version: "R5-V8.1"
 
 profile::ccs::file_transfer::repo_ref: "IT-5486/s3"
 
+profile::ccs::tomcat::java_home: "/usr/lib/jvm/zulu-17"
 ## Note this is not the same as ccs_instrument.
 profile::ccs::tomcat::trending_site: "maincamera"
