(cluster/{auxtel,comcam,lsstcam}-ccs) add new ccs releases

--- a/hieradata/cluster/auxtel-ccs.yaml
+++ b/hieradata/cluster/auxtel-ccs.yaml
@@ -68,6 +68,9 @@ ccs_software::installations:
   ats-software-2.3.10:
     aliases:
       - "puppet-2.3.10"
+  ats-software-2.3.11:
+    aliases:
+      - "puppet-2.3.11"
 
 ## Used in lookups:
 ccs_site: "summit"
