(node/lsstcam-mcm.cp) add missing dds routes

--- a/hieradata/node/lsstcam-mcm.cp.lsst.org.yaml
+++ b/hieradata/node/lsstcam-mcm.cp.lsst.org.yaml
@@ -102,6 +102,10 @@ nm::connections:
         address1: "139.229.170.4/24,139.229.170.254"
         method: "manual"
         never-default: true
+        route1: "139.229.147.0/24,139.229.170.254"
+        route2: "139.229.166.0/24,139.229.170.254"
+        route3: "139.229.167.0/24,139.229.170.254"
+        route4: "139.229.178.0/24,139.229.170.254"
       ipv6:
         method: "disabled"
       proxy: {}
