(renovate) add enhancement label to PRs

--- a/renovate.json
+++ b/renovate.json
@@ -3,5 +3,6 @@
   "extends": [
     "config:recommended"
   ],
-  "ignorePaths": ["**/hieradata/**"]
+  "ignorePaths": ["**/hieradata/**"],
+  "labels": ["enhancement"]
 }
