(renovate) limit open PRs to 2
As this repo uses fairly expesnive paid github runners, and renovate rebases
after every merge, the number of open renovate PRs should be limited.

--- a/renovate.json
+++ b/renovate.json
@@ -4,5 +4,6 @@
     "config:recommended"
   ],
   "ignorePaths": ["**/hieradata/**"],
-  "labels": ["enhancement"]
+  "labels": ["enhancement"],
+  "prConcurrentLimit": 2
 }
