(gha) fix "Commit Message Check" workflow skip of renovate PRs

--- a/.github/workflows/commit_messages.yaml
+++ b/.github/workflows/commit_messages.yaml
@@ -23,7 +23,7 @@ jobs:
     name: Check Commit Message
     needs: [preflight]
     # ignore PRs from renovate
-    if: ${{ needs.preflight.outputs.renovate }} == 'false'
+    if: ${{ needs.preflight.outputs.renovate == 'false' }}
     runs-on: ubuntu-latest
     steps:
       - name: Check Commit Type
