(gha) cancel long running workflows when branch is repushed

--- a/.github/workflows/librarian_puppet.yaml
+++ b/.github/workflows/librarian_puppet.yaml
@@ -9,6 +9,10 @@ name: librarian-puppet
       - cp_production
   pull_request:
 
+concurrency:
+  group: ${{ github.ref_name }}
+  cancel-in-progress: true
+
 jobs:
   librarian_puppet:
     runs-on: ubuntu-latest
