--- a/.github/workflows/rake_checks.yaml
+++ b/.github/workflows/rake_checks.yaml
@@ -10,7 +10,7 @@ name: rake checks
   pull_request:
 
 concurrency:
-  group: ${{ github.ref_name }}
+  group: ${{ github.workflow }}-${{ github.ref_name }}
   cancel-in-progress: true
 
 jobs:
