(gha) add canceling to all push-of-commit triggered workflows

--- a/.github/workflows/markdownlint.yaml
+++ b/.github/workflows/markdownlint.yaml
@@ -9,6 +9,10 @@ name: markdownlint
       - cp_production
   pull_request:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref_name }}
+  cancel-in-progress: true
+
 jobs:
   markdownlint:
     runs-on: ubuntu-latest
