--- a/.github/workflows/block_merge_commits.yaml
+++ b/.github/workflows/block_merge_commits.yaml
@@ -4,6 +4,10 @@ name: Block Merge Commits
 
 "on": pull_request
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref_name }}
+  cancel-in-progress: true
+
 jobs:
   message-check:
     name: Block Merge Commits
