--- a/.github/workflows/commit_messages.yaml
+++ b/.github/workflows/commit_messages.yaml
@@ -4,6 +4,10 @@ name: Commit Message Check
 
 "on": pull_request
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref_name }}
+  cancel-in-progress: true
+
 jobs:
   preflight:
     runs-on: ubuntu-latest
