--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,7 @@
 ---
 require:
 - rubocop-rspec
+- rubocop-rake
 AllCops:
   DisplayCopNames: true
   TargetRubyVersion: '2.7'
@@ -130,4 +131,6 @@ Style/CommentedKeyword:
 Naming/FileName:
   Enabled: false
 RSpec/MultipleMemoizedHelpers:
+  Enabled: false
+RSpec/ContextWording:
   Enabled: false
