(role/comcam-fp) add tcp_tweak profile for s3daemon

--- a/hieradata/role/ccs-dc.yaml
+++ b/hieradata/role/ccs-dc.yaml
@@ -7,6 +7,6 @@ classes:
   - "profile::core::common"
   - "profile::core::debugutils"
   - "profile::core::nfsclient"
-  - "profile::core::sysctl::lhn"
+  - "profile::core::sysctl::tcp_tweak"
 
 profile::ccs::common::sysctls: false
