--- a/hieradata/site/dev.yaml
+++ b/hieradata/site/dev.yaml
@@ -70,12 +70,12 @@ profile::core::firewall::firewall:
     state: "NEW"
     ipset: "ayekan src"
     dport: "9100"
-    action: "accept"
+    jump: "accept"
   "101 accept node_exporter":
     proto: "tcp"
     state: "NEW"
     ipset: "dev src"  # allow ruka to access node_exporter
     dport: "9100"
-    action: "accept"
+    jump: "accept"
 
 profile::core::docker::version: "24.0.9"
