(node/auxtel-mcm.cp, site/cp/role/ccs-mcm) add kafka-broker service

--- a/hieradata/node/auxtel-mcm.cp.lsst.org.yaml
+++ b/hieradata/node/auxtel-mcm.cp.lsst.org.yaml
@@ -46,6 +46,7 @@ ccs_software::services:
   prod:
     - "mmm"
     - "cluster-monitor"
+    - "kafka-broker"
     - "localdb"
     - "lockmanager"
     - "rest-server"
