--- a/hieradata/cluster/ruka/role/rke2.yaml
+++ b/hieradata/cluster/ruka/role/rke2.yaml
@@ -2,6 +2,7 @@
 classes:
   - "profile::core::sysctl::rp_filter"
 profile::core::sysctl::rp_filter::enable: false
+profile::core::k8snode::enable_dhcp: 'service_only'
 rke2::config:
   node-label:
     - "role=storage-node"
