(common) migrate rke:: keys from rke2 role
Preparation to split the rke2 role into rke2server and rke2agent roles.

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -560,3 +560,15 @@ restic::host: "s3.us-east-1.amazonaws.com"
 
 pi::config::reboot: false  # XXX this should be removed when pi role/profile refactoring is complete
 pi::cmdline::reboot: false  # XXX this should be removed when pi role/profile refactoring is complete
+
+rke2::release_series: "1.28"
+rke2::version: "1.28.10~rke2r1"
+rke2::versionlock: true
+rke2::config:
+  server: "https://%{::cluster}.%{::site}.lsst.org:9345"
+  node-name: "%{facts.hostname}"
+  tls-san:
+    - "%{::cluster}.%{::site}.lsst.org"
+  disable:
+    - "rke2-ingress-nginx"
+  disable-cloud-controller: true
